# ChangeLog for x11-apps/xdriinfo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdriinfo/ChangeLog,v 1.39 2009/12/10 18:27:45 fauli Exp $

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  xdriinfo-1.0.3.ebuild:
  x86 stable, bug 294958

  10 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> xdriinfo-1.0.3.ebuild:
  amd64 stable wrt #294958

*xdriinfo-1.0.3 (18 Oct 2009)

  18 Oct 2009; Rémi Cardona <remi@gentoo.org> +xdriinfo-1.0.3.ebuild:
  bump to 1.0.3, sync with overlay

  09 Oct 2009; Markus Meier <maekke@gentoo.org> xdriinfo-1.0.2.ebuild:
  arm stable, bug #282290

  20 May 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking xdriinfo-1.0.2 ppc stable for bug 268581

  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
  xdriinfo-1.0.1.ebuild, xdriinfo-1.0.2.ebuild:
  fix repoman warnings

  05 May 2009; Jeroen Roovers <jer@gentoo.org> xdriinfo-1.0.2.ebuild:
  Stable for HPPA (bug #268581).

  12 Mar 2009; Raúl Porcel <armin76@gentoo.org> xdriinfo-1.0.2.ebuild:
  Add ~arm/~sh

  02 Mar 2009; Peter Volkov <pva@gentoo.org> xdriinfo-1.0.2.ebuild:
  ~mips keyworded, bug #237411

  26 Sep 2008; Jeroen Roovers <jer@gentoo.org> xdriinfo-1.0.2.ebuild:
  Marked ~hppa (bug #237411).

  24 Sep 2008; Alexis Ballier <aballier@gentoo.org> xdriinfo-1.0.2.ebuild:
  keyword ~x86-fbsd

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> xdriinfo-1.0.2.ebuild:
  Stable on ppc64

  27 Jan 2008; Raúl Porcel <armin76@gentoo.org> xdriinfo-1.0.2.ebuild:
  alpha/ia64/sparc stable

  21 Jan 2008; Samuli Suominen <drac@gentoo.org> xdriinfo-1.0.2.ebuild:
  amd64 stable.

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xdriinfo-1.0.2.ebuild:
  Stable on x86 (bug #202087)

*xdriinfo-1.0.2 (08 Sep 2007)

  08 Sep 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  +xdriinfo-1.0.2.ebuild:
  Bump for 7.3.

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  xdriinfo-1.0.1.ebuild: