@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdriinfo/Attic/xdriinfo-1.0.2.ebuild,v 1.13 2009/10/09 22:11:28 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdriinfo/Attic/xdriinfo-1.0.2.ebuild,v 1.14 2009/12/15 16:41:52 armin76 Exp $
 
 # Must be before x-modular eclass is inherited
 #SNAPSHOT="yes"
@@ -8,7 +8,7 @@
 inherit x-modular
 
 DESCRIPTION="query configuration information of DRI drivers"
-KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 ~sh sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 sh sparc x86 ~x86-fbsd"
 IUSE=""
 RDEPEND="x11-libs/libX11
 	virtual/opengl"
