@@ -1,12 +1,12 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdriinfo/Attic/xdriinfo-1.0.3.ebuild,v 1.3 2009/12/10 18:27:45 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdriinfo/Attic/xdriinfo-1.0.3.ebuild,v 1.4 2009/12/15 16:41:52 armin76 Exp $
 
 inherit x-modular
 
 DESCRIPTION="query configuration information of DRI drivers"
 
-KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc x86 ~x86-fbsd"
+KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 sh ~sparc x86 ~x86-fbsd"
 IUSE=""
 
 RDEPEND="x11-libs/libX11
